--- a/gdp.ipynb
+++ b/gdp.ipynb
@@ -3991,7 +3991,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "connection_string = f\"{'postgresql'}://{'postgres'}:{'123456'}@{'127.0.0.1'}:{'5432'}/{'test'}\"\n",
+    "connection_string = f\"{'###'}://{'###'}:{'###'}@{'###'}:{'###'}/{'####'}\"\n",
     "# adjust with your own info"
    ]
   },
